Alternate fix for Bug 2534 - Viewing items table on item edit screen requires horizontal scrolling
This patch doesn't eliminate horizontal scrolling, but simplifies
the situation:

- The left-hand sidebar has been moved below the table of items.
- The "overflow:scroll" style has been removed from the table of items.
  Having overflow set meant that it was often necessary to scroll twice
  to reach data in the table: once using the scrollbars on the table
  and again using the page's scrollbars.

The NEKLS catalogers also extend their thanks for this fix.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
@@ -134,3 +134,14 @@ a.tagnum {
 .linktools a:hover { background-color: #FFC; }
 .subfield_controls { margin : 0 .5em; }
 .readonly { border-width : 1px; border-style: inset; padding-left : 15px; background: #EEE url(../../img/locked.png) center left no-repeat; width:29em; }
+
+#cataloguing_additem_itemlist {
+	margin-bottom : 1em;
+}
+.yui-gf div.first {
+	width : 19%;
+}
+
+.yui-gf .yui-u {
+	width: 79.2%;
+}
