--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1896,9 +1896,6 @@ img.spinner {
     vertical-align: middle;
     padding-right: 0.3em;
 }
-#cataloguing_additem_itemlist div {
-	overflow : scroll;
-}
 ul.budget_hierarchy {
     margin-left: 0px;
     padding-left: 0px;
